fix: fixes paths
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/init/kustomizations/harbor.yaml
+++ b/deployment/init/kustomizations/harbor.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 15m
-  path: apps/harbor
+  path: deployment/apps/harbor
   prune: true
   timeout: 2m
   sourceRef:
