refactor: changes all fluxcd resources to v2
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/authentik/release.yaml
+++ b/deployment/apps/authentik/release.yaml
@@ -1,4 +1,4 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: authentik
@@ -32,8 +32,7 @@ spec:
       # -- A custom namespace to override the default namespace for the deployed resources.
       namespaceOverride: ""
       # -- Common labels for all resources.
-      additionalLabels:
-        {}
+      additionalLabels: {}
         # app: authentik
 
       # Number of old deployment ReplicaSets to retain. The rest will be garbage collected.
@@ -70,15 +69,13 @@ spec:
 
       # -- Toggle and define pod-level security context.
       # @default -- `{}` (See [values.yaml])
-      securityContext:
-        {}
+      securityContext: {}
         # runAsUser: 1000
         # runAsGroup: 1000
         # fsGroup: 1000
 
       # -- Mapping between IP and hostnames that will be injected as entries in the pod's hosts files
-      hostAliases:
-        []
+      hostAliases: []
         # - ip: 10.20.30.40
         #   hostnames:
         #     - my.hostname
@@ -101,8 +98,7 @@ spec:
           # -- Default node affinity rules. Either `none`, `soft` or `hard`
           type: hard
           # -- Default match expressions for node affinity
-          matchExpressions:
-            []
+          matchExpressions: []
             # - key: topology.kubernetes.io/zone
             #   operator: In
             #   values:
@@ -111,15 +107,13 @@ spec:
 
       # -- Default [TopologySpreadConstraints] rules for all components
       ## Ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/
-      topologySpreadConstraints:
-        []
+      topologySpreadConstraints: []
         # - maxSkew: 1
         #   topologyKey: topology.kubernetes.io/zone
         #   whenUnsatisfiable: DoNotSchedule
 
       # -- Deployment strategy for all deployed Deployments
-      deploymentStrategy:
-        {}
+      deploymentStrategy: {}
         # type: RollingUpdate
         # rollingUpdate:
         #   maxSurge: 25%
@@ -159,8 +153,7 @@ spec:
 
       # -- envFrom to pass to all deployed Deployments. Does not apply to GeoIP
       # @default -- `[]` (See [values.yaml])
-      envFrom:
-        []
+      envFrom: []
         # - configMapRef:
         #     name: config-map-name
         # - secretRef:
@@ -168,15 +161,13 @@ spec:
 
       # -- Additional volumeMounts to all deployed Deployments. Does not apply to GeoIP
       # @default -- `[]` (See [values.yaml])
-      volumeMounts:
-        []
+      volumeMounts: []
         # - name: custom
         #   mountPath: /custom
 
       # -- Additional volumes to all deployed Deployments.
       # @default -- `[]` (See [values.yaml])
-      volumes:
-        []
+      volumes: []
         # - name: custom
         #   emptyDir: {}
 
@@ -280,8 +271,7 @@ spec:
         # -- Average memory utilization percentage for the authentik server [HPA]
         targetMemoryUtilizationPercentage: ~
         # -- Configures the scaling behavior of the target in both Up and Down directions.
-        behavior:
-          {}
+        behavior: {}
           # scaleDown:
           #   stabilizationWindowSeconds: 300
           #   policies:
@@ -337,8 +327,7 @@ spec:
       # -- Environment variables to pass to the authentik server. Does not apply to GeoIP
       # See configuration options at https://goauthentik.io/docs/installation/configuration/
       # @default -- `[]` (See [values.yaml])
-      env:
-        []
+      env: []
         # - name: AUTHENTIK_VAR_NAME
         #   value: VALUE
         # - name: AUTHENTIK_VAR_OTHER
@@ -354,8 +343,7 @@ spec:
 
       # -- envFrom to pass to the authentik server. Does not apply to GeoIP
       # @default -- `[]` (See [values.yaml])
-      envFrom:
-        []
+      envFrom: []
         # - configMapRef:
         #     name: config-map-name
         # - secretRef:
@@ -380,14 +368,12 @@ spec:
       #     - echo init
 
       # -- Additional volumeMounts to the authentik server main container
-      volumeMounts:
-        []
+      volumeMounts: []
         # - name: custom
         #   mountPath: /custom
 
       # -- Additional volumes to the authentik server pod
-      volumes:
-        []
+      volumes: []
         # - name: custom
         #   emptyDir: {}
 
@@ -401,8 +387,7 @@ spec:
       podLabels: {}
 
       # -- Resource limits and requests for the authentik server
-      resources:
-        {}
+      resources: {}
         # requests:
         #   cpu: 100m
         #   memory: 512Mi
@@ -431,16 +416,14 @@ spec:
 
       # -- authentik server pod-level security context
       # @default -- `{}` (See [values.yaml])
-      securityContext:
-        {}
+      securityContext: {}
         # runAsUser: 1000
         # runAsGroup: 1000
         # fsGroup: 1000
 
       # -- authentik server container-level security context
       # @default -- See [values.yaml]
-      containerSecurityContext:
-        {}
+      containerSecurityContext: {}
         # Not all of the following has been tested. Use at your own risk.
         # runAsNonRoot: true
         # readOnlyRootFilesystem: true
@@ -524,16 +507,14 @@ spec:
       # @default -- `[]` (defaults to global.topologySpreadConstraints)
       ## Ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/
       ## If labelSelector is left out, it will default to the labelSelector configuration of the deployment
-      topologySpreadConstraints:
-        []
+      topologySpreadConstraints: []
         # - maxSkew: 1
         #   topologyKey: topology.kubernetes.io/zone
         #   whenUnsatisfiable: DoNotSchedule
 
       # -- Deployment strategy to be added to the authentik server Deployment
       # @default -- `{}` (defaults to global.deploymentStrategy)
-      deploymentStrategy:
-        {}
+      deploymentStrategy: {}
         # type: RollingUpdate
         # rollingUpdate:
         #   maxSurge: 25%
@@ -605,8 +586,7 @@ spec:
           # -- Prometheus [MetricsRelabelConfigs] to apply to samples before ingestion
           metricRelabelings: []
           # -- Prometheus ServiceMonitor selector
-          selector:
-            {}
+          selector: {}
             # prometheus: kube-prometheus
 
           # -- Prometheus ServiceMonitor scheme
@@ -639,8 +619,7 @@ spec:
         # -- Ingress path type. One of `Exact`, `Prefix` or `ImplementationSpecific`
         pathType: Prefix
         # -- additional ingress paths
-        extraPaths:
-          []
+        extraPaths: []
           # - path: /*
           #   pathType: Prefix
           #   backend:
@@ -650,8 +629,7 @@ spec:
           #         name: use-annotation
 
         # -- ingress TLS configuration
-        tls:
-          []
+        tls: []
           # - secretName: authentik-tls
           #   hosts:
           #     - authentik.domain.tld
@@ -723,8 +701,7 @@ spec:
         # -- Average memory utilization percentage for the authentik worker [HPA]
         targetMemoryUtilizationPercentage: ~
         # -- Configures the scaling behavior of the target in both Up and Down directions.
-        behavior:
-          {}
+        behavior: {}
           # scaleDown:
           #   stabilizationWindowSeconds: 300
           #   policies:
@@ -780,8 +757,7 @@ spec:
       # -- Environment variables to pass to the authentik worker. Does not apply to GeoIP
       # See configuration options at https://goauthentik.io/docs/installation/configuration/
       # @default -- `[]` (See [values.yaml])
-      env:
-        []
+      env: []
         # - name: AUTHENTIK_VAR_NAME
         #   value: VALUE
         # - name: AUTHENTIK_VAR_OTHER
@@ -797,8 +773,7 @@ spec:
 
       # -- envFrom to pass to the authentik worker. Does not apply to GeoIP
       # @default -- `[]` (See [values.yaml])
-      envFrom:
-        []
+      envFrom: []
         # - configMapRef:
         #     name: config-map-name
         # - secretRef:
@@ -823,14 +798,12 @@ spec:
       #     - echo init
 
       # -- Additional volumeMounts to the authentik worker main container
-      volumeMounts:
-        []
+      volumeMounts: []
         # - name: custom
         #   mountPath: /custom
 
       # -- Additional volumes to the authentik worker pod
-      volumes:
-        []
+      volumes: []
         # - name: custom
         #   emptyDir: {}
 
@@ -844,8 +817,7 @@ spec:
       podLabels: {}
 
       # -- Resource limits and requests for the authentik worker
-      resources:
-        {}
+      resources: {}
         # requests:
         #   cpu: 100m
         #   memory: 512Mi
@@ -865,16 +837,14 @@ spec:
 
       # -- authentik worker pod-level security context
       # @default -- `{}` (See [values.yaml])
-      securityContext:
-        {}
+      securityContext: {}
         # runAsUser: 1000
         # runAsGroup: 1000
         # fsGroup: 1000
 
       # -- authentik worker container-level security context
       # @default -- See [values.yaml]
-      containerSecurityContext:
-        {}
+      containerSecurityContext: {}
         # Not all of the following has been tested. Use at your own risk.
         # runAsNonRoot: true
         # readOnlyRootFilesystem: true
@@ -959,16 +929,14 @@ spec:
       # @default -- `[]` (defaults to global.topologySpreadConstraints)
       ## Ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/
       ## If labelSelector is left out, it will default to the labelSelector configuration of the deployment
-      topologySpreadConstraints:
-        []
+      topologySpreadConstraints: []
         # - maxSkew: 1
         #   topologyKey: topology.kubernetes.io/zone
         #   whenUnsatisfiable: DoNotSchedule
 
       # -- Deployment strategy to be added to the authentik worker Deployment
       # @default -- `{}` (defaults to global.deploymentStrategy)
-      deploymentStrategy:
-        {}
+      deploymentStrategy: {}
         # type: RollingUpdate
         # rollingUpdate:
         #   maxSurge: 25%
@@ -1035,22 +1003,19 @@ spec:
 
       # -- envFrom to pass to the GeoIP containers
       # @default -- `[]` (See [values.yaml])
-      envFrom:
-        []
+      envFrom: []
         # - configMapRef:
         #     name: config-map-name
         # - secretRef:
         #     name: secret-name
 
       # -- Additional volumeMounts to the GeoIP containers. Make sure the volumes exists for the server and the worker.
-      volumeMounts:
-        []
+      volumeMounts: []
         # - name: custom
         #   mountPath: /custom
 
       # -- Resource limits and requests for GeoIP containers
-      resources:
-        {}
+      resources: {}
         # requests:
         #   cpu: 100m
         #   memory: 128Mi
@@ -1059,8 +1024,7 @@ spec:
 
       # -- GeoIP container-level security context
       # @default -- See [values.yaml]
-      containerSecurityContext:
-        {}
+      containerSecurityContext: {}
         # Not all of the following has been tested. Use at your own risk.
         # runAsNonRoot: true
         # readOnlyRootFilesystem: true
@@ -1077,8 +1041,7 @@ spec:
         # -- PrometheusRule namespace
         namespace: ""
         # -- PrometheusRule selector
-        selector:
-          {}
+        selector: {}
           # prometheus: kube-prometheus
 
         # -- PrometheusRule labels
