refactor: changes all fluxcd resources to v1
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/forgejo/release.yaml
+++ b/deployment/apps/forgejo/release.yaml
@@ -1,4 +1,4 @@
-apiVersion: helm.toolkit.fluxcd.io/v2
+apiVersion: helm.toolkit.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: forgejo
@@ -211,8 +211,7 @@ spec:
     httpRoute:
       enabled: false
       annotations: {}
-      parentRefs:
-        []
+      parentRefs: []
         # - name: contour #name of the gateway resource
         #   namespace: projectcontour #name space where gateway resource running
       hostnames: []
@@ -221,8 +220,7 @@ spec:
         path:
           type: PathPrefix
           value: "/"
-        timeouts:
-          {}
+        timeouts: {}
           # request: 10s  #Maximum time the Gateway waits to complete the full client request and response cycle.
           # backendRequest: 10s # Maximum time the Gateway waits for a response from the backend service.
       filters: []
@@ -277,8 +275,7 @@ spec:
     ## @section deployment
     #
     ## @param resources Kubernetes resources
-    resources:
-      {}
+    resources: {}
       # We usually recommend not to specify default resources and to leave this as a conscious
       # choice for the user. This also increases chances charts run on environments with little
       # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -319,8 +316,7 @@ spec:
     ## @param deployment.labels Labels for the deployment
     ## @param deployment.annotations Annotations for the Forgejo deployment to be created
     deployment:
-      env:
-        []
+      env: []
         # - name: VARIABLE
         #   value: my-value
       terminationGracePeriodSeconds: 60
@@ -461,8 +457,7 @@ spec:
           #    prometheus-release: prom1
 
       ## @param gitea.ldap LDAP configuration
-      ldap:
-        []
+      ldap: []
         # - name: "LDAP 1"
         #  existingSecret:
         #  securityProtocol:
@@ -479,8 +474,7 @@ spec:
 
       # Either specify inline `key` and `secret` or refer to them via `existingSecret`
       ## @param gitea.oauth OAuth configuration
-      oauth:
-        []
+      oauth: []
         # - name: 'OAuth 1'
         #   provider:
         #   key:
