fix: fixes intervalls
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/jenkins/release.yaml
+++ b/deployment/apps/jenkins/release.yaml
@@ -4,7 +4,8 @@ metadata:
   name: jenkins
   namespace: components
 spec:
-  interval: 5m
+  interval: 15m
+  timeout: 5m
   chart:
     spec:
       chart: jenkins
