fix: changes talos provisioning
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/infrastructure/files/cp-scheduling.yaml
+++ b/infrastructure/files/cp-scheduling.yaml
@@ -1,2 +1,9 @@
 cluster:
   allowSchedulingOnControlPlanes: true
+  network:
+    cni:
+      name: flannel
+    podSubnets:
+      - 10.244.0.0/16 # Pod network (Flannel overlay)
+    serviceSubnets:
+      - 10.96.0.0/12 # K8s service network
