--- a/deployment/init/repositories/traefik.yaml
+++ b/deployment/init/repositories/traefik.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 15m
-  url: https://helm.traefik.io/traefik
+  url: https://traefik.github.io/charts
