--- a/deployment/init/repositories/weave.yaml
+++ b/deployment/init/repositories/weave.yaml
@@ -2,9 +2,6 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   annotations:
-    metadata.weave.works/description:
-      This is the source location for the Weave GitOps
-      Dashboard's helm chart.
   labels:
     app.kubernetes.io/component: ui
     app.kubernetes.io/created-by: weave-gitops-cli
@@ -13,6 +10,6 @@ metadata:
   name: ww-gitops
   namespace: flux-system
 spec:
-  interval: 15m
+  interval: 1h0m0s
   type: oci
   url: oci://ghcr.io/weaveworks/charts
