fix: adds nodeport
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/forgejo/release.yaml
+++ b/deployment/apps/forgejo/release.yaml
@@ -161,7 +161,7 @@ spec:
         port: 2222
         clusterIP:
         loadBalancerIP:
-        nodePort:
+        nodePort: 2222
         externalTrafficPolicy:
         externalIPs:
         ipFamilyPolicy:
