fix: adds nodeport
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/forgejo/release.yaml
+++ b/deployment/apps/forgejo/release.yaml
@@ -157,7 +157,7 @@ spec:
       ## @param service.ssh.labels SSH service additional labels
       ## @param service.ssh.loadBalancerClass Loadbalancer class
       ssh:
-        type: ClusterIP
+        type: NodePort
         port: 2222
         clusterIP:
         loadBalancerIP:
