fix: (hopefully) fixes the nodeport config
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/forgejo/release.yaml
+++ b/deployment/apps/forgejo/release.yaml
@@ -161,8 +161,8 @@ spec:
         port: 2222
         clusterIP:
         loadBalancerIP:
-        nodePort: 2222
-        externalTrafficPolicy:
+        nodePort: 32222
+        externalTrafficPolicy: Local
         externalIPs:
         ipFamilyPolicy:
         ipFamilies:
