--- a/deployment/init/repositories/cert-manager.yaml
+++ b/deployment/init/repositories/cert-manager.yaml
@@ -1,10 +1,9 @@
 apiVersion: source.toolkit.fluxcd.io/v1
-kind: OCIRepository
+kind: HelmRepository
 metadata:
   name: cert-manager
   namespace: flux-system
 spec:
   interval: 15m
-  url: oci://quay.io/jetstack/charts/cert-manager
-  ref:
-    tag: v1.19.1
+  url: oci://quay.io/jetstack/charts/cert-manager:v1.19.1
+  type: oci
