fix: updates cert-manager release
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/cert-manager/release.yaml
+++ b/deployment/apps/cert-manager/release.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: components
 spec:
   chartRef:
-    kind: OCIRepository
+    kind: HelmRepository
     name: cert-manager
     namespace: flux-system
   interval: 15m
