fix: updates cert-manager release
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/cert-manager/release.yaml
+++ b/deployment/apps/cert-manager/release.yaml
@@ -4,10 +4,13 @@ metadata:
   name: cert-manager
   namespace: components
 spec:
-  chartRef:
-    kind: HelmRepository
-    name: cert-manager
-    namespace: flux-system
+  chart:
+    spec:
+      chart: cert-manager
+      sourceRef:
+        kind: HelmRepository
+        name: cert-manager
+        namespace: flux-system
   interval: 15m
   timeout: 5m
   releaseName: cert-manager
