fix: fixes cert-manager versioning and values
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/init/repositories/cert-manager.yaml
+++ b/deployment/init/repositories/cert-manager.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: flux-system
 spec:
   interval: 15m
-  url: oci://quay.io/jetstack/charts/cert-manager:v1.19.1
+  url: oci://quay.io/jetstack/charts/cert-manager
   type: oci
