--- a/deployment/init/repositories/cert-manager.yaml
+++ b/deployment/init/repositories/cert-manager.yaml
@@ -5,5 +5,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 15m
-  url: oci://quay.io/jetstack/charts
-  type: oci
+  url: https://charts.jetstack.io
