--- a/deployment/apps/cert-manager/release.yaml
+++ b/deployment/apps/cert-manager/release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: cert-manager
-  namespace: components
+  namespace: cert-manager
 spec:
   chart:
     spec:
