--- a/deployment/resources/certs/cert-wildcard-prod.yaml
+++ b/deployment/resources/certs/cert-wildcard-prod.yaml
@@ -5,6 +5,10 @@ metadata:
   namespace: certs
 spec:
   secretName: letsencrypt-wildcard-cert-prod
+  secretTemplate:
+    annotations:
+      reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "components,dashboard"
   issuerRef:
     name: letsencrypt-prod
     kind: ClusterIssuer
