fix: corrects a small mistake
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/authentik/release.yaml
+++ b/deployment/apps/authentik/release.yaml
@@ -639,7 +639,7 @@ spec:
               - auth.only-a-user.com
 
         # -- uses `server.service.servicePortHttps` instead of `server.service.servicePortHttp`
-        https: true
+        https: false
 
       route:
         main:
