--- a/deployment/apps/weave/release.yaml
+++ b/deployment/apps/weave/release.yaml
@@ -1,11 +1,9 @@
-apiVersion: helm.toolkit.fluxcd.io/v2
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   annotations:
-    metadata.weave.works/description:
-      This is the Weave GitOps Dashboard.  It provides
-      a simple way to get insights into your GitOps workloads.
-  name: ww-gitops
+    metadata.weave.works/description: This is the Weave GitOps Dashboard
+  name: weave-gitops
   namespace: dashboard
 spec:
   chart:
@@ -13,7 +11,7 @@ spec:
       chart: weave-gitops
       sourceRef:
         kind: HelmRepository
-        name: ww-gitops
+        name: weave-gitops
         namespace: flux-system
   interval: 15m
   timeout: 5m
@@ -37,8 +35,7 @@ spec:
     # -- What log level to output. Valid levels are 'debug', 'info', 'warn' and 'error'
     logLevel: info
     # -- Additional arguments to pass in to the gitops-server
-    additionalArgs:
-      - --route-prefix=/dashboard
+    additionalArgs: []
     # Any other environment variables:
     envVars:
       - name: WEAVE_GITOPS_FEATURE_TENANCY
@@ -148,15 +145,15 @@ spec:
         kubernetes.io/ingress.class: traefik
       # kubernetes.io/tls-acme: "true"
       hosts:
-        - host: lab.only-a-user.com
+        - host: dash.only-a-user.com
           paths:
-            - path: /dashboard
+            - path: /
               pathType: ImplementationSpecific
 
-      tls: []
-      #  - secretName: chart-example-tls
-      #    hosts:
-      #      - chart-example.local
+      tls:
+        - secretName: letsencrypt-wildcard-cert-prod
+          hosts:
+            - dash.only-a-user.com
     extraVolumes: []
     extraVolumeMounts: []
     # Example using extraVolumes and extraVolumeMounts to load 'oidc-auth' secret
@@ -230,6 +227,3 @@ spec:
           prometheus.io/scrape: "true"
           prometheus.io/path: "/metrics"
           prometheus.io/port: "{{ .Values.metrics.service.port }}"
-    extraEnvVars:
-      - name: WEAVE_GITOPS_FEATURE_OIDC_BUTTON_LABEL
-        value: "login with authentik"
